<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_nuance"
    tools:context=".UI.ProfilActivity">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="265dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edit_text"
        android:clickable="false"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/currentPassword"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="265dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edit_text"
        android:clickable="false"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="265dp"
        android:layout_height="47dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/rounded_edit_text"
        android:clickable="false"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/annuler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/modifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/Modifier"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserEmail" />

    <Button
        android:id="@+id/enregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/rounded_button"
        android:clickable="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/enregistrer_modification"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/logOut"
        app:layout_constraintEnd_toStartOf="@+id/annuler"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/LogOut"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/rounded_button"
        android:clickable="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/annuler"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/logOut"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>